--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,22 +4,25 @@ on: [push]
 
 jobs:
   build:
-    runs-on: ubuntu-18.04
+    runs-on: ubuntu-20.04
     strategy:
       fail-fast: false
       matrix:
-        python-version: [2.7, 3.4, 3.5, 3.6, 3.7, 3.8]
+        python-version: [3.8, 3.9]
 
     steps:
-    - uses: actions/checkout@v2
+      - uses: actions/checkout@v2
 
-    - name: Set up Python ${{ matrix.python-version }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ matrix.python-version }}
+      - name: Set up Python ${{ matrix.python-version }}
+        uses: actions/setup-python@v2
+        with:
+          python-version: ${{ matrix.python-version }}
 
-    - name: Show Python version
-      run: python -V
+      - name: Show Python version
+        run: python -V
 
-    - name: Run the tests
-      run: python setup.py test -q
+      - name: Install requirements
+        run: pip install -r test-requirements.txt
+
+      - name: Run the tests
+        run: pytest
